--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "browser-sync": "^2.26.14",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
-    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "jquery": "^3.6.0",
-    "sass": "^1.32.8"
+    "jquery": "^3.6.0"
   }
 }
